--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
 title:              hzcforever
 bio:                'Something interesting.'
-description:        "Something interesting."
+description:        "自律给人掌控生活的力量"
 reading_time:       false
 words_per_minute:   200
 logo:               'assets/img/logo.jpg'
