--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
 title:              hzcforever
-bio:                'Something interesting.'
+bio:                '自律给人掌控生活的力量'
 description:        "自律给人掌控生活的力量"
 reading_time:       false
 words_per_minute:   200
